traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:20: error: not found: value ecrireMessage
    ecrireMessage(compteur.toString)
    ^TraversalByColumn:27: error: not found: value ecrireMessage
  ecrireMessage(48)
  ^